--- a/tests/quickinspectortest.qrc
+++ b/tests/quickinspectortest.qrc
@@ -1,3 +1,4 @@
+<?xml version="1.0"?>
 <RCC>
     <qresource prefix="/">
         <file>manual/reparenttest.qml</file>
@@ -6,6 +7,7 @@
         <file>manual/lsd.png</file>
         <file>manual/rotationinvariant.qml</file>
         <file>manual/shadereffect.qml</file>
+        <file>manual/shadereffect6.qml</file>
         <file>manual/anchorspropertyfiltertest.qml</file>
         <file>manual/picking/invisibleoverlay.qml</file>
         <file>manual/picking/negativezordering.qml</file>
