Render images from the response
If the response is an image, render them below the operations list.

--- a/plugins/network/networkreplywidget.ui
+++ b/plugins/network/networkreplywidget.ui
@@ -44,6 +44,11 @@
          <bool>true</bool>
         </property>
        </widget>
+       <widget class="QLabel" name="imageLabel">
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
       </widget>
      </item>
     </layout>
